// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AirlineForm should match the snapshot on create 1`] = `
<form
  class="mx-2 airline-form"
>
  <div
    class="form-row"
  >
    <div
      class="form-group w-50 pr-1"
      id="input-group-1"
      role="group"
    >
      <label
        class="d-block"
        for="input-1"
        id="input-group-1__BV_label_"
      >
        IATA:
      </label>
      <div>
        <input
          aria-required="true"
          class="form-control"
          data-test="form-iata-input"
          id="input-1"
          placeholder="Enter IATA code"
          required="required"
          type="text"
        />
         
        <div
          class="invalid-feedback d-block"
        >
          
        IATA must be filled
      
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
     
    <div
      class="form-group w-50 pl-1"
      id="input-group-2"
      role="group"
    >
      <label
        class="d-block"
        for="input-2"
        id="input-group-2__BV_label_"
      >
        Airline Name:
      </label>
      <div>
        <input
          aria-required="true"
          class="form-control"
          data-test="form-name-input"
          id="input-2"
          placeholder="Enter airline name"
          required="required"
          type="text"
        />
         
        <div
          class="invalid-feedback d-block"
        >
          
        Name must be filled
      
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="form-row"
  >
    <div
      class="form-group w-25 pr-1"
      id="input-group-3"
      role="group"
    >
      <label
        class="d-block crud-form-label"
        for="input-3"
        id="input-group-3__BV_label_"
      >
        Primary Color:
      </label>
      <div>
        <input
          aria-required="true"
          class="form-control"
          id="input-3"
          placeholder="Enter primary color"
          required="required"
          type="color"
        />
        <!---->
        <!---->
        <!---->
      </div>
    </div>
     
    <div
      class="form-group w-25 px-1"
      id="input-group-4"
      role="group"
    >
      <label
        class="d-block crud-form-label"
        for="input-4"
        id="input-group-4__BV_label_"
      >
        Secondary Color:
      </label>
      <div>
        <input
          aria-required="true"
          class="form-control"
          id="input-4"
          placeholder="Enter secondary color"
          required="required"
          type="color"
        />
        <!---->
        <!---->
        <!---->
      </div>
    </div>
     
    <div
      class="form-group align-content-end w-50"
      id="input-group-5"
      role="group"
    >
      <label
        class="d-block"
        for="checkboxes-1"
        id="input-group-5__BV_label_"
      >
        Services:
      </label>
      <div>
        <div
          class="ml-2"
          id="checkboxes-1"
          role="group"
          tabindex="-1"
        >
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="checkboxes-1"
              type="checkbox"
              value="bags"
            />
            <label
              class="custom-control-label"
            >
              <i
                class="material-icons"
                data-test="form-bags-checkbox"
                disabled="disabled"
                title="Bags"
              >
                
            work
          
              </i>
            </label>
          </div>
           
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="checkboxes-1"
              type="checkbox"
              value="checkin"
            />
            <label
              class="custom-control-label"
            >
              <i
                class="material-icons"
                data-test="form-checkin-checkbox"
                disabled="disabled"
                title="Check-in"
              >
                
            where_to_vote
          
              </i>
            </label>
          </div>
           
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="checkboxes-1"
              type="checkbox"
              value="seats"
            />
            <label
              class="custom-control-label"
            >
              <i
                class="material-icons"
                data-test="form-seats-checkbox"
                disabled="disabled"
                title="Seats"
              >
                
            airline_seat_recline_normal
          
              </i>
            </label>
          </div>
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </div>
</form>
`;

exports[`AirlineForm should match the snapshot on update 1`] = `
<form
  class="mx-2 airline-form"
>
  <div
    class="form-row"
  >
    <div
      class="form-group w-50 pr-1"
      id="input-group-1"
      role="group"
    >
      <label
        class="d-block"
        for="input-1"
        id="input-group-1__BV_label_"
      >
        IATA:
      </label>
      <div>
        <input
          aria-required="true"
          class="form-control"
          data-test="form-iata-input"
          id="input-1"
          placeholder="Enter IATA code"
          required="required"
          type="text"
        />
         
        <div
          class="invalid-feedback"
        >
          
        IATA must be filled
      
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
     
    <div
      class="form-group w-50 pl-1"
      id="input-group-2"
      role="group"
    >
      <label
        class="d-block"
        for="input-2"
        id="input-group-2__BV_label_"
      >
        Airline Name:
      </label>
      <div>
        <input
          aria-required="true"
          class="form-control"
          data-test="form-name-input"
          id="input-2"
          placeholder="Enter airline name"
          required="required"
          type="text"
        />
         
        <div
          class="invalid-feedback"
        >
          
        Name must be filled
      
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="form-row"
  >
    <div
      class="form-group w-25 pr-1"
      id="input-group-3"
      role="group"
    >
      <label
        class="d-block crud-form-label"
        for="input-3"
        id="input-group-3__BV_label_"
      >
        Primary Color:
      </label>
      <div>
        <input
          aria-required="true"
          class="form-control"
          id="input-3"
          placeholder="Enter primary color"
          required="required"
          type="color"
        />
        <!---->
        <!---->
        <!---->
      </div>
    </div>
     
    <div
      class="form-group w-25 px-1"
      id="input-group-4"
      role="group"
    >
      <label
        class="d-block crud-form-label"
        for="input-4"
        id="input-group-4__BV_label_"
      >
        Secondary Color:
      </label>
      <div>
        <input
          aria-required="true"
          class="form-control"
          id="input-4"
          placeholder="Enter secondary color"
          required="required"
          type="color"
        />
        <!---->
        <!---->
        <!---->
      </div>
    </div>
     
    <div
      class="form-group align-content-end w-50"
      id="input-group-5"
      role="group"
    >
      <label
        class="d-block"
        for="checkboxes-1"
        id="input-group-5__BV_label_"
      >
        Services:
      </label>
      <div>
        <div
          class="ml-2"
          id="checkboxes-1"
          role="group"
          tabindex="-1"
        >
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="checkboxes-1"
              type="checkbox"
              value="bags"
            />
            <label
              class="custom-control-label"
            >
              <i
                class="material-icons"
                data-test="form-bags-checkbox"
                title="Bags"
              >
                
            work
          
              </i>
            </label>
          </div>
           
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="checkboxes-1"
              type="checkbox"
              value="checkin"
            />
            <label
              class="custom-control-label"
            >
              <i
                class="material-icons"
                data-test="form-checkin-checkbox"
                disabled="disabled"
                title="Check-in"
              >
                
            where_to_vote
          
              </i>
            </label>
          </div>
           
          <div
            class="custom-control custom-control-inline custom-checkbox"
          >
            <input
              autocomplete="off"
              class="custom-control-input"
              name="checkboxes-1"
              type="checkbox"
              value="seats"
            />
            <label
              class="custom-control-label"
            >
              <i
                class="material-icons"
                data-test="form-seats-checkbox"
                title="Seats"
              >
                
            airline_seat_recline_normal
          
              </i>
            </label>
          </div>
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </div>
</form>
`;
